# fastApi-Integration-tests

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml
app/: auth.py  config.py  db.py  fake_db.py  helpers.py  main.py  models.py
tests/: conftest.py  test_auth_api.py  test_user_preference_api.py  test_weather_api.py
tests/assets/: pref_alexjacobs.json
